# python_pdf_editor

./: .cruft.json  .gitignore  .sonarcloud.properties  README.md  pyproject.toml
docs/source/: conf.py  index.rst  modules.rst  python_pdf_editor.rst
src/python_pdf_editor/: app.py  chatgpt2.py  main.py  pdf_handler.py  vis_pdf.py
tests/: test_main.py  test_pdf_handler.py
